[package]
name = "simple_encryption"
version = "0.1.0"
authors = ["Soham Zemse <22412996+zemse@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
overflow-checks = false

[dependencies]
secure_random = { path = "../secure_random" }